--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,11 +12,11 @@ phases:
   pre_build:
     commands:
       - echo "Installing dependencies..."
-      - pip install -r simple-python-app/requirements.txt
+      - pip install -r requirements.txt
   build:
     commands:
       - echo "Running tests..."
-      - cd simple-python-app/
+      # - cd simple-python-app/
       - echo "Building Docker image..."
       - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
       - docker build -t "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/my-python-flask-app:latest" .
@@ -24,7 +24,7 @@ phases:
   post_build:
     commands:
       - echo "Build completed successfully!"
-# artifacts:
-#   files:
-#     - '**/*'
-#   base-directory: ../simple-python-app
+artifacts:
+  files:
+    - '**/*'
+  base-directory: ../simple-python-app
