--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,4 +27,5 @@ phases:
 artifacts:
   files:
     - '**/*'
-  base-directory: ../simple-python-app
+  # base-directory: ../simple-python-app
+  base-directory: .
